# Gandiva

./: .gitignore  README.md  com.github.watsonprojects.gandiva  com.github.watsonprojects.gandiva.yml  install.py  meson.build  post_install.py  setup.py  setup_meson.py
.github/workflows/: ci.yml
data/: application.css  com.github.subhadeepjasu.ensembles.appdata.xml.in  com.github.subhadeepjasu.gandiva.gschema.xml  com.github.watsonprojects.gandiva.appdata.xml  com.github.watsonprojects.gandiva.desktop  com.github.watsonprojects.gandiva.gschema.xml  meson.build
data/Dictionaries/: keyword.dict
data/SkillPlugins/AppSearch/: __init__.py
data/SkillPlugins/DateTime/: __init__.py
data/SkillPlugins/DuckDuckGo/: __init__.py
data/SkillPlugins/FileSystemSearch/: __init__.py
data/SkillPlugins/OpenWeatherMap/: __init__.py
data/SkillPlugins/OpenWeatherMap/images/: credits.txt
data/SkillPlugins/Personality/: __init__.py
data/SkillPlugins/Wikipedia/: __init__.py
gandiva/: main.py
gandiva/core/: wakeword_engine.py
gandiva/shell/: custom_shortcut_settings.py  display_enclosure.py  main_window.py
meson/: post_install.py
po/: meson.build
prefix/share/: gandiva-0.0.1-py3.8.egg-info
src/: application.py  gandiva.in  main.py  meson.build
src/config/: constants.py  settings.py
src/core/: app_search.py  core_loop.py  file_system_search.py  inference_engine.py  skill_backend.py  stt.py  system_portal.py  tts.py  wake_word_engine.py
src/shell/: chat_bubble.py  chat_view.py  face_view.py  initial_setup.py  main_window.py  suggestion_button.py  toast_widget.py
src/utils/: utilities.py
